--- a/q/275689.html
+++ b/q/275689.html
@@ -26,17 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>097</td><td>Perl 5 n</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
-<tr d-ix="1"><td>100</td><td>JavaScript Node.js</td><td>240923T081611Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275711#275711">tsh</a></td></tr>
-<tr d-ix="2"><td>114</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
-<tr d-ix="3"><td>016</td><td>Jelly</td><td>240923T092335Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275715#275715">emanresu</a></td></tr>
-<tr d-ix="4"><td>104</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
-<tr d-ix="5"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
-<tr d-ix="6"><td>177</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
+<tr d-ix="0"><td>173</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
+<tr d-ix="1"><td>097</td><td>Perl 5 n</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
+<tr d-ix="2"><td>100</td><td>JavaScript Node.js</td><td>240923T081611Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275711#275711">tsh</a></td></tr>
+<tr d-ix="3"><td>114</td><td>Ruby</td><td>240922T194645Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275693#275693">Jordan</a></td></tr>
+<tr d-ix="4"><td>016</td><td>Jelly</td><td>240923T092335Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275715#275715">emanresu</a></td></tr>
+<tr d-ix="5"><td>104</td><td>JavaScript ES6</td><td>240922T195155Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275694#275694">Arnauld</a></td></tr>
+<tr d-ix="6"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
 <tr d-ix="7"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
 <tr d-ix="8"><td>033</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> -n, 97 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>177</s> 173 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:f&quot;{(t:=bin((L:=[t+' '*(9-len(t))for i in range(3**9)if(t:=g(i)[:-1]).count('x')-t.count('o')in(0,1)]).index(s))[2:]):0&gt;13}&quot;
+g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
+</code></pre>
+<p><a href="https://tio.run/##TY9BjsIwDEX3cwoLCdkuFAjZQEQ5wdygdFGGpkSCpApBCkKcvROgjOZ58y3Z/t/dLRydlavO97rY9af6vD/UcFF6dKegir2xRN@qKMMEATNa56fGUmDWzoMBY8HXtm1IZtmajX6utGS4VLmoePbjrjYQRuQ8fBqHnG4upoLTgLGHJtKFuVyqitViK@Rj9NUWQ4yoUCTTuBHsPEJ0WMaxrCYtxflccv8XInk8cQmcYnRD/dPw1vAiaYChe@kBZNV5k1Lq9AP3vw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p>-4 bytes thanks to Malo</p>
+<p>Basically brute force, converts base 3 to <code>' xo'</code> strings and then enumerates cases where there are <code>0</code> or <code>1</code> more x's than o's. Also accounts for extra whitespace/zeros at the end of each string.</p>
+<p>Ungolfed:</p>
+
+<pre class="lang-python prettyprint-override"><code>def f(s):
+    L=[]
+    g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
+    for i in range(3**9):
+        t1=g(i)[:-1]
+        if t1.count('x')-t1.count('o') in (0,1):L.append(t1+' '*(9-len(t1)))
+    t1=bin(L.index(s))[2:]
+    return '0'*(13-len(t1))+t1
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> -n, 97 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>$i=$_;$n=0;y/123/ ox/==9&amp;&amp;(s/x/x/g- s/o/o/g)=~/0|^1/&amp;&amp;++$n&amp;&amp;/$i/&amp;&amp;printf&quot;%013b\n&quot;,$n for 1e8..4e8
 </code></pre>
@@ -49,7 +69,7 @@
 <p><a href="https://tio.run/##fZRNT4NAEIbv/RUj2bpgW2GiNbFIPXk26dWPRu1SG5HBgnEN4l@vuxBMP9idvQC7z7zzzoTNxDoZb1gcbfLP5zKhl6fEZfMhS72IOfIyXFDp5r5UazmC3Ce1lt7Rrx/8PKIPtGZxyeZVlGfrVVrETj/As2dH4YNB9fW6SoRi3DugB0@eMN9lKD6Yc00T6Z26Kr87wkEi0mXxyo49zxehSjfIKKuqTdiLaQ3v38AKkRfg9kBFuUqzzyKacmiDD0HITLwUYgHRFHiwHbwa7mJSB6nYw/bKvwjOx/soEGlUykNF1FpYB@/GZFehGkNDoS0mbZhRjWwYGtWkrUizN0lmDE3eJNhagiZvCrOpYdfIm8EdqKE@jiZvLSbNGAZGtcOWbGMmNUk2rNub7iNYMTRhlpZg98/TYGTDTGoENjWjNwKbmtGbbdxYz63nlTWoL5glFRDBMYtdYPVt02SrwAvrM83lAE5/NM6h3prAVT@fqq1WYgL9XL2qTPrpPnWasnTU6cVHm7olKrgGTm98AvxmNrud8S1iu4iDz/8JdiXCXrX5Aw" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>Second answer. This function gives each of the 6045 valid input strings a unique identifier with 13 bits in the hashmap <code>%f</code> and return those 13 bits (as a string of <code>0</code>s and <code>1</code>s) for all valid input strings of length 9 consisting of the three charachters <code> </code>, <code>o</code> and <code>x</code> where the number of <code>x</code>s is the same or one more than the number of <code>o</code>s. I chose to include the empty input of nine <code> </code>s which returns thirteen <code>0</code>s and this adds one more to the count of valid inputs: 6046 as I think the challenge wasn't clear about the all space input.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 100 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 100 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;(i=1e4,g=(p,c)=&gt;p[8]?i+=c&amp;6?0:p&lt;s:[0,7,1].map(n=&gt;g(p+' xo'[n%5],~~c+n))|i)``.toString(2).slice(1)
 </code></pre>
@@ -65,7 +85,7 @@
 <hr />
 <p>We encoded all 6046 valid boards together with another 59 invalid ones into number not greater than 6105. The bit string output version also added an extra 1808 to each output so they actually encoded in range <span class="math-container">\$\left[1808, 7913\right]\$</span>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 114 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 114 bytes</h1>
 <p>Brute-force solution. Iterates over all numbers in base 3, transliterates each to <code>o</code>/<code>x</code>/space, then if it’s a valid position increments a counter, breaking and returning the count in binary if it’s equal to the input.</p>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;s{i=j=0
 (t=(&quot;%9d&quot;%j.to_s(3)).tr&quot;012&quot;,&quot; xo&quot;
@@ -84,7 +104,7 @@ i-1}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsEiN9ulpSVpuhY3M3TtiqszbbNsDbg0Smw1lFQtU5RUs_RK8uOLNYw1NfVKipQMDI2UdJQUKvKVuDK1bQ0z0zQM9PQMNW1tbUv0kvNL80o07Cs0deHsfE2uLKAyTSAnM0ehGKiKK1PXsBZqX2qBglu0kgIMKMVyoQhUoAlUoKsAugIqUAHk5VdUKMAF8kGgAgiUYiGWLVgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 16 bytes</h1>
 <pre><code>3ṗ9SÞị“o x”iµBḊV
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/9/44c7plsGH5z3c3f2oYU6@QsWjhrmZh7Y6PdzRFfb//3@lfCBQqAACJQA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a> Port of <a href="https://codegolf.stackexchange.com/a/275707/100664">my Vyxal</a>, see that for an explanation of why this works.</p>
@@ -100,7 +120,7 @@ i-1}
               ḊV # Remove first digit and concatenate
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 104 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 104 bytes</h1>
 <p>Expects a 9-character string made of <code>' '</code>, <code>'O'</code>, <code>'X'</code> and returns a 13-character binary string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;(g=k=&gt;i--?g(k/b|0)+&quot;01O X&quot;[t-=~-(k%=b),k+6%~b]:t=&quot;&quot;)((F=n=&gt;g(n,i=9)!=s&amp;&amp;!t+!~t+F(-~n))(b=3),i=13,b=2)
@@ -114,7 +134,7 @@ i-1}
 </code></pre>
 <p><a href="https://tio.run/##jc5BCsIwEAXQvadIA0pCOyoogsLoEboNiItS2xJTEjHBhUiv5d6DGVPFjVbxz/Ixf2aXHTObH@TegTbbwvsSmU00xyWrUOFSAqwqpkaT85jHNCWCrh1gA0z1ccITtVk4pJQznUic8wjtYBC5OGpcXIYeaDT3udHW1MWwNhUrGU1DiAihnPc6TJAf1uJXC/jdBHk3er20Qz82yDNpVxt55YeJvy89/iLhwY621kT6NH8zeyeDewDrslyBlacCp@P57A4" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 17 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 17 bytes</h1>
 <pre><code>2ʀ9↔µ∑;«+⅛«İṠḟbṅḢ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCIyyoA54oaUwrXiiJE7wqsr4oWbwqvEsOG5oOG4n2LhuYXhuKIiLCIiLCJvb29vIHh4eHgiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -135,25 +155,6 @@ i-1}
             Ṡ     # And concatenate
               bṅ  # Convert the index to binary and concatenate
                 Ḣ # And remove the first character
-</code></pre>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 177 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda s:'0'*(13-len(t:=bin((L:=[t+' '*(9-len(t))for i in range(3**9)if(t:=g(i)[:-1]).count('x')-t.count('o')in(0,1)]).index(s))[2:]))+t
-g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
-</code></pre>
-<p><a href="https://tio.run/##TU5BjsIwDLzvK3xZ2W4pkM0FIvoDflB6KEtbIkFShSCF1xcDBTG@zGjs8Qy3ePROr4YwduVuPDXn/aGBi8ElZqR0cWodRVPurSPamrKKOYI465fB3PkAFqyD0Li@JZ1la7bd46Qny5UpVM3zf391kTAhF/EtPLJkLmeKZcG6Q5vowlz9mZo5jz99OVVJBpU8TBvFPiAkj1X61XXeU1osNI@fApL/gBfgDJOf5ovDi8MTwgEm9eQTkM0QrDTspD@Pdw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-<p>Basically brute force, converts base 3 to <code>' xo'</code> strings and then enumerates cases where there are <code>0</code> or <code>1</code> more x's than o's. Also accounts for extra whitespace/zeros at the end of each string.</p>
-<p>Ungolfed:</p>
-
-<pre class="lang-python prettyprint-override"><code>def f(s):
-    L=[]
-    g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
-    for i in range(3**9):
-        t1=g(i)[:-1]
-        if t1.count('x')-t1.count('o') in (0,1):L.append(t1+' '*(9-len(t1)))
-    t1=bin(L.index(s))[2:]
-    return '0'*(13-len(t1))+t1
 </code></pre>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 32 bytes</h1>
