--- a/q/275739.html
+++ b/q/275739.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
-<tr d-ix="1"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
-<tr d-ix="2"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
-<tr d-ix="3"><td>070</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
-<tr d-ix="4"><td>026</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
-<tr d-ix="5"><td>104</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
-<tr d-ix="6"><td>016</td><td>Jelly</td><td>240924T124136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275750#275750">Jonathan</a></td></tr>
-<tr d-ix="7"><td>164</td><td>Fortran GFortran</td><td>240924T094254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275746#275746">roblogic</a></td></tr>
-<tr d-ix="8"><td>176</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="0"><td>137</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="1"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
+<tr d-ix="2"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
+<tr d-ix="3"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
+<tr d-ix="4"><td>070</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
+<tr d-ix="5"><td>026</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
+<tr d-ix="6"><td>104</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="7"><td>016</td><td>Jelly</td><td>240924T124136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275750#275750">Jonathan</a></td></tr>
+<tr d-ix="8"><td>164</td><td>Fortran GFortran</td><td>240924T094254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275746#275746">roblogic</a></td></tr>
 <tr d-ix="9"><td>043</td><td>Wolfram Language Mathematica</td><td>240924T115953Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275749#275749">att</a></td></tr>
 <tr d-ix="10"><td>018</td><td>05AB1E</td><td>240924T093200Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275745#275745">Kevin Cr</a></td></tr>
 <tr d-ix="11"><td>024</td><td>Japt P</td><td>240924T104913Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275748#275748">Shaggy</a></td></tr>
@@ -42,13 +42,24 @@
 <tr d-ix="13"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
 <tr d-ix="14"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> 137 bytes</h1>
+
+<pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
+int i;f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
+</code></pre>
+<p><a href="https://tio.run/##XY3JDoIwFEX3fgV5BtMGWLilRn6EDelAXiLtSwckIfy6terO5R1OjiTqZilzPuNCzsebDFGhu5/QxgqFYXynFAODv320hiUbcLZaVRvfgQvjPBPkC2gYbF2dhv6LjlCHsezQYotNc7kOoFdtoQenFPAWBRc/x1FeR/6YlwltURd9KV7SPKY55M6Q9guGgKsu4eknWt8" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
+<p>Uses <code>-fwrapv</code> flag for well-defined signed integer overflow wrapping (as opposed to the standard's undefined behaviour when overflowing).</p>
+<p>Uses <code>-fpermissive</code> flag to suppress errors from defining <code>f</code> without a type</p>
+<p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
+<p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say'$_=&lt;&gt;';say&quot;;\$_-$_||say &quot;,(even,odd)[$_%2]for 0..2**32
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/784sVJdJd7Wxk7dGshUso5RiddVia@pAXIUlHQ0UstS83TyU1I0o1XiVY1i0/KLFAz09Iy0tIyN/v//l19QkpmfV/xf19dUz8DQAAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>vim, 80 bytes</h1>
+<div id="pu2" class="pu"><h1>vim, 80 bytes</h1>
 <pre><code>a&quot;ncw
 1 odd
 2 even&lt;ESC&gt;oVkyPjj2&lt;C-V&gt;&lt;C-A&gt;j2&lt;C-V&gt;&lt;C-A&gt;&lt;ESC&gt;0&quot;aDdd2147483647@ao&lt;C-V&gt;&lt;ESC&gt;&quot;npi:v/^&lt;C-V&gt;&lt;ESC&gt;A /d&lt;C-V&gt;&lt;ESC&gt;0D@&quot;
@@ -95,7 +106,7 @@ dw
 <p><a href="https://tio.run/##K/v/P1EpL7mcy1AhPyWFy0ghtSw1Tzo/LLsyICvLSIwRhKUNlBJdUlIMTRwS88WklfIKMq3K9OPEpB0V9FPEpA1cHJS4Usqluf7/BwA" rel="nofollow noreferrer" title="V (vim) – Try It Online">Try it online (with just the first 30 segments)</a></p>
 <p>For some reason, TIO doesn't want to execute the macro at the end of the generated code, so you'll have to run that one in vim. Save the output from the first TIO as a.vim, then open a file with a single number in it, and run <code>so! a.vim</code>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 62 (Theoretical)</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 62 (Theoretical)</h1>
 
 <pre class="lang-bash prettyprint-override"><code>f='(($1-%d))||echo'
 printf &quot;$f even
@@ -142,14 +153,14 @@ $f even
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX50rLb9IQyPT1khLy9DIOlNX11pTs1qhoCgzryRNQUklTSE/JYULSKWWpeZxKSmoZCqoROvqZsZa1/7/DwA" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 70 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 70 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>print(&quot;def f(n):f&quot;,*range(2**33),sep=&quot;==n==print('eovdedn'[n&amp;1::2]);&quot;)
 </code></pre>
 <p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
 <p>If it's OK for the function to error out after printing, 1 byte can be saved by writing <code>&lt;print(...)</code> in place of <code>==print(...)</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> 26 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> 26 bytes</h1>
 <pre><code>´≡´ＳＦＸχχ⁺ι⪫´¦´¦§⪪evenodd⁴ι
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjeTAooy80o0lB51Lny_Z7OSpjVXWn6RgkZAfnlqkYahgY6CkaamAkRNQE5psUamjoJXfmaehtKhZYeWKekoOJZ45qWkVmgEF-RkAo1JLUvNy09JAUqYaOooZGoCgfWS4qTkYqh9y6OVdMtylGIXGkD4AA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code and only goes up to 100 (the default interpreter can't actually handle very big switch statements anyway). Explanation:</p>
@@ -173,14 +184,14 @@ $f even
 </code></pre>
 <p>Each segment is simply a pair of strings; the <code>¦</code>s delimit the strings. (Using Charcoal integer constants would have made the generating program too long.) The first string of each segment is simply the case value for each case in turn while the second is its literal value and if that case is taken then it implicitly prints.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike></strike> 104 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike></strike> 104 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(){puts(&quot;g(x){&quot;);for(unsigned i=~0;i;printf(&quot;if(x==%u)puts(%s);&quot;,i--,i%2?&quot;odd&quot;:&quot;even&quot;));puts(&quot;}&quot;);}
 </code></pre>
 <p>Outputs &quot;segments&quot; in reverse order.</p>
 <p><a href="https://tio.run/##LY7LCsMgEEX3@QoZEGYgQumyIv2RbEJ8MItqiEkIiP11K23v@pzDXVRYltY8UlmPPSMEvKgAaZ82PGLmEJ0VbN43zXrdOO4egT1exsiDvsoEMk/dgJGVGlnen5CshQe400Ug0r9w7UhtPSBeM0c8E1sqg/ivH9BDbR8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 18 </s> 16 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 18 </s> 16 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Ø%ŻṾ⁾fị“£Ƙ®“⁴Ḍ»Ṿ
 </code></pre>
 <p>A full program that prints the code of a full program. (Or a monadic Link that yields the code of a full program as a list of characters.)</p>
@@ -228,7 +239,7 @@ $f even
                  - implicit print
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, <s>180</s> 164 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, <s>180</s> 164 bytes</h1>
 <pre class="lang-fortran prettyprint-override"><code>integer*8n;character*8t;print*,'integer*8i';print*,'read*,i'
 do n=0,2**32-1;t='&quot;even&quot;';if(mod(n,2)&gt;0)t='&quot;odd&quot;'
 print*,'if(i==',n,')print*,',t;enddo;print*,'end'
@@ -237,15 +248,6 @@ end
 <p><a href="https://tio.run/##PY7BCsMgEETv@YqSyyaikKaXgth/EXc10nYtRvr5tYZSL8POPNgZn3LJllXwv6PWyIUCZXFl7TabrSuHKfqVGxESOo/Qs0wWhYwwYDqxWeQqxGVVZ10MjPQmHkFHPz0TTizX@bbMB0iIIwz9rZ@iMSBZwvzPZNHEiKn3NAdDk1o/zj9s2KvynFTbHUi5jdz9Cw" rel="nofollow noreferrer">Try it online!</a>
 <sub><s><a href="https://tio.run/##RY/bCsMgEETf8xUlL5sEhTSklyB@jOhqJO1arPTza@0l6cuwc2ZhGBtiioq4s98jZ08JHcbuTELPKiqd3iZVt1iSjsGWexAri6hMxwowYUeyZ@MwjdPxNEyHapHXYBpiQyu8bRYp@zZJqPGBVMMP7T8oGFPDv8Y2XkpgxKBdGUsCyZiwPRUHVZGcn9pelLtnbinwssMh1zPq5QU" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">180B</a></s></sub></p>
 <p>Outputs a valid Fortran program. <a href="https://tio.run/##ldGxCsIwFEbh3acInbRU8N4bbR36MIWkJUsqofj6seDgUoST6Q5/zvLNa9nKlK/L/D1qdSlvcYmlHdLJlTiFttuPNJ/TOLqDd3OXV9n/tF0T3zE3zv1by2@9hrCP/64VtQ21PWrfUfuB2j1qD6j9JG1BloIsBVkKshRkKchSkKUgS0GWgiwVWSqyVGSpyFKRpSJLRZaKLBVZKrI0ZGnI0pClIUtDloYsDVkasjRkacjSI0uPLP2RZcyhVuk/" rel="nofollow noreferrer">Example</a></p>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, 176 bytes</h1>
-
-<pre class="lang-cpp prettyprint-override"><code>#import&lt;iostream&gt;
-int64_t i;main(){printf(&quot;#import&lt;iostream&gt;\nmain(){int64_t x;std::cin&gt;&gt;x;&quot;);do printf(&quot;if(x==%ld)printf(\&quot;%s\&quot;);&quot;,i,i&amp;1?&quot;odd&quot;:&quot;even&quot;);while(++i);printf(&quot;}&quot;);}
-</code></pre>
-<p><a href="https://tio.run/##ZcxLCoMwFIXheVchKZYEdVAoHZhqNyKUkIe9YB4kQYXi1ptmoKNOP/5zuHPNyHlKZ9DO@vgAG6KXTPcnMPF@e8UCqGZgMPk4n0lh9JcOZi@OyUpDFG3LwfT9ShGhwhbHGhReu66cBNllQGUYcoNqqOFyfSIrBGqRnKXJurxhkriqgNDjYcu8pfTlamJjSI1aPHPzDw" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
-<p><a href="https://tio.run/##ZYxNCoMwGAX3PYWkWBJUqFC6MGovIpSQn/YDTUISVChevWkWuup23szj1lYvzmM8w2SNCy0YH5xkU38CHe63Z8iATgw0Jh/rElIY/amD3o0jWakPomk46L5fKSJUmOyoQeG16/JRkJ0MKPdDclAJJVzqBzJCoAbJWepElzeMEhcFtPWV0ONkS8sW45erkb18rNTimJ1/" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try with i&lt;10</a></p>
-<p>Uses <code>-fwrapv</code> flag for well-defined signed integer overflow wrapping (as opposed to the standard's undefined behaviour when overflowing)</p>
 </div>
 <div id="pu9" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 43 bytes</h1>
 <pre><code>&lt;|#-1-&gt;&quot;odd&quot;?&quot;even&quot;[[(-1)^#]]&amp;~Array~5*^9|&gt;
